# hpc-access

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CHANGELOG.rst  LICENSE  Makefile  Pipfile  README.md  VERSION  dev_charite.json  env.example  local.yml  manage.py  package-lock.json  package.json  production.yml  pyproject.toml  release-please-config.json  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: ci.yml  conventional-prs.yml  docker-build.yml  docker-cleanup-pr.yml  docker-cleanup-untagged.yml  main.yml  release-please.yml
adminsec/: apps.py  constants.py  email.py  ldap.py  models.py  permissions_api.py  rules.py  tasks.py  urls.py  views.py  views_api.py
adminsec/tests/: test_email.py  test_ldap.py  test_permissions.py  test_permissions_api.py  test_rules.py  test_tasks.py  test_views.py  test_views_api.py
config/: celery.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docker/: Dockerfile  build-docker.sh  entrypoint.sh
docs/: adminsec.rst  conf.py  howto.rst  index.rst  make.bat  users.rst  usersec_login.rst  usersec_pis.rst  usersec_users.rst
docs/pycharm/: configuration.rst
export/: projects.yaml
hpcaccess/: auth_backends.py  conftest.py
hpcaccess/templates/: 500.html  _titlebar.html  base.html
hpcaccess/users/: admin.py  apps.py  (+3 more)
requirements/: base.txt  ldap.txt  local.txt  production.txt
usersec/: admin.py  apps.py  forms.py  models.py  rules.py  serializers.py  urls.py  views.py  views_api.py
utility/: install_ldap_dependencies.sh
(+166 files in other folders)
