[project]
name = "hpcaccess"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
dynamic = ["version"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool]
[tool.setuptools.dynamic]
version = {attr = "hpcaccess.__version__"}

[tool.ruff]
exclude = [
    ".tox",
    ".git",
    "*/migrations/*",
    "*/static/CACHE/*",
    "docs",
    "node_modules",
    "venv",
]
ignore = []
line-length = 120
select = [
    "E",
    "F",
    "W",
]

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
# Django migrations should not produce any errors:
module = "*.migrations.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.settings.test"

[tool.coverage.run]
include = ["hpcaccess/*"]
omit = ["*migrations*", "*tests*"]
plugins = ["django_coverage_plugin"]

[tool.pytest.ini_options]
addopts = ["--ds=config.settings.test", "--reuse-db"]
python_files = "tests.py test_*.py"
